syntax = "proto3";

package infraboard.mpaas.gateway;
option go_package = "github.com/infraboard/mpaas/apps/gateway";

import "mcube/pb/resource/meta.proto";

enum TYPE {
    // 基于APISIX的网关
    APISIX = 0;
    // 基于Etcd对接的Traefik网关
    TRAEFIK = 1;
}

message Gateway {
    // 元信息
    // @gotags: bson:",inline" json:"meta"
    infraboard.mcube.resource.Meta meta = 1;
    // 网关信息
    // @gotags: bson:",inline" json:"spec"
    CreateGatewayRequest spec = 2;
}

message GatewaySet {
    // @gotags: bson:"total" json:"total"
    int64 total = 1;
    // @gotags: bson:"items" json:"items"
    repeated Gateway items = 2;
}

// CreateGatewayRequest 创建网关
message CreateGatewayRequest {
    // 所属域
    // @gotags: bson:"domain" json:"domain"
    string domain = 1;
    // 所属空间
    // @gotags: bson:"namespace" json:"namespace"
    string namespace = 2;
    // 创建者
    // @gotags: bson:"create_by" json:"create_by"
    string create_by = 3;
    // 是否公开
    // @gotags: bson:"is_public" json:"is_public"
    bool is_public = 4;
    // 是否是该空间下的默认网关, 一个空间内只允许有1个默认网关
    // @gotags: bson:"is_default" json:"is_default"
    bool is_default = 5;
    // 网关的名称
    // @gotags: bson:"name" json:"name" validate:"required,lte=30"
    string name = 6;
    // 网关的描述
    // @gotags: bson:"description" json:"description" validate:"lte=400"
    string description =7;
    // 网关类型
    // @gotags: bson:"type" json:"type"
    TYPE type = 8;
    // Traefik网关配置, 通过该配置可以操作网关
    // @gotags: bson:"traefik_config" json:"traefik_config"
    TraefikConfig traefik_config = 9;
    // APISix网关相关配置
    // @gotags: bson:"apisix_config" json:"apisix_config"
    ApisixConfig apisix_config = 10;
    // 网关标签
    // @gotags: bson:"labels" json:"labels"
    map<string,string> labels =15;                 
}

message ApisixConfig {
    // 网关地址
    // @gotags: bson:"address" json:"address"
    string address =1;
    // 操作admin api的key
    // @gotags: bson:"api_key" json:"api_key"
    string api_key = 2;
}

// Traefik网关配置, 通过操作Etcd来操作Traefik
message TraefikConfig {
    // etcd地址
    // @gotags: bson:"endpoints" json:"endpoints"
    repeated string endpoints = 1;
    // 用户名
    // @gotags: bson:"username" json:"username"
    string username = 2;
    // 用户密码
    // @gotags: bson:"password" json:"password"
    string password = 3;
    // 前缀
    // @gotags: bson:"root_key" json:"root_key"
    string root_key = 4;
    // 开启TLS
    // @gotags: bson:"enable_tls" json:"enable_tls"
    bool enable_tls = 5;
}